--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/message/OperationResultPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/message/OperationResultPanel.html
@@ -68,13 +68,16 @@
                     <br />
                 </div>
             </li>
+            <li wicket:id="subresults">
+            	<span class="messages-details">
+            		<div wicket:id="subresult" />
+    			</span>
+    		</li>
         </ul>
     </div>
-    <ul class="messages-details">
-        <li wicket:id="subresults">
-            <div wicket:id="subresult" />
-        </li>
-    </ul>
+<!--     <ul class="messages-details"> -->
+        
+<!--     </ul> -->
 </wicket:panel>
 </body>
 </html>
