displaying help in form MID-1077

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
@@ -32,11 +32,11 @@
             <img class="objectFormDeleteButton" wicket:id="removeIcon" title="Delete"/>
         </a>
     </div>
-    <!--<div class="objectFormHelpContainer">-->
-    <!--<img wicket:id="helpButton" class="objectFormHelpButton"/>-->
+    <div class="objectFormHelpContainer">
+    <img wicket:id="helpButton" class="objectFormHelpButton"/>
 
-    <!--<div wicket:id="helpContent" class="objectFormHelpContent"/>-->
-    <!--</div>-->
+    <div wicket:id="helpContent" class="objectFormHelpContent"/>
+    </div>
     <div wicket:id="feedback" class="feedbackPanel"/>
 </wicket:panel>
 </html>
