--- a/gui/admin-gui/src/main/webapp/css/evolveum.css
+++ b/gui/admin-gui/src/main/webapp/css/evolveum.css
@@ -912,7 +912,7 @@ div.tabPanel div.tab-row a:hover {
 
 .assignmentBlock .assignmentAttrLabel {
 	margin-top: 12px;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .assignmentBlock .operationIcon {
