fix for MID-1230, but it's harcoded ony for c:description. there isn't a way to tell when field should be input(text) and when it should be textarea (annotation must be implemented later probably)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
@@ -32,10 +32,10 @@
             <div wicket:id="body" class="assignmentBody">
                 <!--body-->
                 <div class="assignmentDescription">
-                    <span style="width: 70px; display: inline-block;">
+                    <span style="width: 70px; display: inline-block; vertical-align: top; margin-top: 10px;">
                         <wicket:message key="AssignmentEditorPanel.description"/>
                     </span>
-                    <input type="text" wicket:id="description"/>
+                    <textarea cols="34" rows="2" wicket:id="description"/>
                 </div>
                 <div class="assignmentDescription">
                     <span style="width: 70px; display: inline-block;">
