--- a/gui/admin-gui/src/main/webapp/css/css-fixed-IE.css
+++ b/gui/admin-gui/src/main/webapp/css/css-fixed-IE.css
@@ -20,7 +20,13 @@
  */
 
 /** A WebReflection Solution */
-div.objectForm .tableForm input[type='text'], div.objectForm .tableForm input[type='password'], div.objectForm .tableForm input[type='checkbox'], .assignmentBody input[type="text"], .assignmentBody input[type="password"] {
+div.objectForm .tableForm input[type='text'],
+div.objectForm .tableForm input[type='password'],
+div.objectForm .tableForm input[type='checkbox'],
+div.objectForm .tableForm textarea,
+.assignmentBody input[type="text"],
+.assignmentBody input[type="password"],
+.assignmentBody textarea {
 	outline: none;
 	margin: 8px 0px 4px 10px;
 	font-size: 15px;
