removing tristate checkbox MID-1290

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TriStateComboPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TriStateComboPanel.html
@@ -22,9 +22,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-	<span wicket:id="inputElement" class="threeStateCheckBoxElement">
-		<input wicket:id="input" type="hidden" style="position: absolute;">
-		<span wicket:id="inputImg" />
-	</span>
+    <select wicket:id="combo"/>
 </wicket:panel>
 </html>
