--- a/gui/admin-gui/src/main/webapp/css/css-fixed-nonIE.css
+++ b/gui/admin-gui/src/main/webapp/css/css-fixed-nonIE.css
@@ -37,9 +37,11 @@ div.objectForm .tableForm input[type='text'],
 div.objectForm .tableForm input[type='password'],
 div.objectForm .tableForm input[type='checkbox'],
 div.objectForm .tableForm textarea,
+div.objectForm .tableForm select,
 .assignmentBody input[type="text"],
 .assignmentBody input[type="password"],
-.assignmentBody textarea {
+.assignmentBody textarea,
+.assignmentBody select {
 	outline: none;
 	margin: 4px 0px 4px 10px;
 	padding: 5px;
