Major enhancement of workflows gui. More details on task information page (showing model context and workflow data).

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel.html
@@ -27,5 +27,9 @@
 
     <span class="operatingFormText"><wicket:message key="ExecuteChangeOptionsPanel.label.reconcile"/></span>
     <input wicket:id="reconcile" type="checkbox"/>
+
+    <span class="operatingFormText"><wicket:message key="ExecuteChangeOptionsPanel.label.executeAfterAllApprovals"/></span>
+    <input wicket:id="executeAfterAllApprovals" type="checkbox"/>
+
 </wicket:panel>
 </html>
