protected accounts support MID-1120

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.css
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.css
@@ -332,3 +332,7 @@ div.objectFormHeader.modified {
     background-color: #d4bbf9;
 }
 
+div.objectFormHeader.protected {
+    background-color: #ffe055;
+}
+
