--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.html
@@ -31,6 +31,7 @@
                     <img class="objectFormHeaderIcon" wicket:id="headerImg"/>
 
                     <div class="objectFormHeaderText">
+                        <img wicket:id="shield" wicket:message="title:PrismObjectPanel.protectedAccount" style="margin-right: 2px;"/>
                         <span class="objectFormHeaderName" wicket:id="header"/>
                         <br>
                         <span class="objectFormHeaderDescription" wicket:id="description"/>
