--- a/gui/admin-gui/src/main/webapp/less/evolveum.less
+++ b/gui/admin-gui/src/main/webapp/less/evolveum.less
@@ -71,6 +71,8 @@
   }
 }
 
+
+/* for PageTest
 input {
   border: 1px solid #8D9095;
   padding: 2px;
@@ -79,6 +81,7 @@ input {
     border: 1px solid #267994;
   }
 }
+*/
 
 /*
  * TopMenu.less after wro4j is fixed
