login page css fix.

--- a/gui/admin-gui/src/main/webapp/css/css-fixed-IE.css
+++ b/gui/admin-gui/src/main/webapp/css/css-fixed-IE.css
@@ -20,6 +20,8 @@
  */
 
 /** A WebReflection Solution */
+div.objectForm table.tableForm input[type='text'],
+div.objectForm table.tableForm input[type='password'],
 div.objectForm .tableForm .tableFormBody input[type='text'],
 div.objectForm .tableForm .tableFormBody input[type='password'],
 div.objectForm .tableForm .tableFormBody input[type='checkbox'],
