--- a/gui/admin-gui/src/main/webapp/css/css-fixed-nonIE.css
+++ b/gui/admin-gui/src/main/webapp/css/css-fixed-nonIE.css
@@ -33,6 +33,8 @@
     bottom:0;
 }
 
+div.objectForm table.tableForm input[type='text'],
+div.objectForm table.tableForm input[type='password'],
 div.objectForm .tableForm .tableFormBody input[type='text'],
 div.objectForm .tableForm .tableFormBody input[type='password'],
 div.objectForm .tableForm .tableFormBody input[type='checkbox'],
