disabling activation for assignments, fix for MID-1317

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
@@ -39,13 +39,13 @@
                     <input type="text" wicket:id="relation"/>
                 </div>
                 
-                <div class="assignmentBlock">
+                <div class="assignmentBlock" wicket:id="activationBlock">
                 	<h4>
 	                    <wicket:message key="ActivationType.title"/>
 	                </h4>
 	                <div class="assignmentContent">
-	                    <span><wicket:message key="ActivationType.enabled"/></span>
-	                    <div wicket:id="enabled" style="display: inline;"/> <br /><br />
+	                    <span><wicket:message key="ActivationType.administrativeStatus"/></span>
+	                    <div wicket:id="administrativeStatus" style="display: inline;"/> <br /><br />
 	
 	                    <span><wicket:message key="ActivationType.validFrom"/></span>
 	                    <input wicket:id="validFrom" type="text"/>
