report pages, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.html
@@ -20,18 +20,10 @@
     <table style="margin: 10px;" cellpadding="4" cellspacing="4">
         <tr>
             <td>
-                <wicket:message key="AuditPopupPanel.dateFrom"/>
+                <wicket:message key="ReconciliationPopupPanel.resource"/>
             </td>
             <td>
-                <input type="text" wicket:id="dateFrom"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <wicket:message key="AuditPopupPanel.dateTo"/>
-            </td>
-            <td>
-                <input type="text" wicket:id="dateTo"/>
+                <select wicket:id="resource"/>
             </td>
         </tr>
     </table>
