--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/ReconciliationPopupPanel.html
@@ -17,19 +17,21 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <table style="margin: 10px;" cellpadding="4" cellspacing="4">
-        <tr>
-            <td>
-                <wicket:message key="ReconciliationPopupPanel.resource"/>
-            </td>
-            <td>
-                <select wicket:id="resource"/>
-            </td>
-        </tr>
-    </table>
+    <form wicket:id="form">
+        <table style="margin: 10px;" cellpadding="4" cellspacing="4">
+            <tr>
+                <td>
+                    <wicket:message key="ReconciliationPopupPanel.resource"/>
+                </td>
+                <td>
+                    <select wicket:id="resource"/>
+                </td>
+            </tr>
+        </table>
 
-    <div style="text-align: center;">
-        <a wicket:id="run"/>
-    </div>
+        <div style="text-align: center;">
+            <a wicket:id="run"/>
+        </div>
+    </form>
 </wicket:panel>
 </html>
