--- a/gui/admin-gui/src/main/webapp/reports/reportUserList.jrxml
+++ b/gui/admin-gui/src/main/webapp/reports/reportUserList.jrxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version last-->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reportUserList" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="67e465c5-46ea-40d2-bea0-469c6cf38937">
 	<property name="ireport.zoom" value="1.6105100000000019"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="235"/>
+	<property name="ireport.x" value="543"/>
+	<property name="ireport.y" value="276"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="DejaVu Sans" fontSize="50" isBold="false"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="DejaVu Sans" fontSize="18" isBold="false"/>
@@ -17,8 +16,9 @@
 	<parameter name="LOGO_PATH" class="java.lang.String"/>
 	<parameter name="roleReport" class="net.sf.jasperreports.engine.JasperReport" isForPrompting="false"/>
 	<parameter name="orgReport" class="net.sf.jasperreports.engine.JasperReport" isForPrompting="false"/>
+	<parameter name="accountReport" class="net.sf.jasperreports.engine.JasperReport" isForPrompting="false"/>
 	<queryString language="hql">
-		<![CDATA[select u.oid as oid, u.name.orig as name, u.givenName.orig as firstName, u.familyName.orig as lastName, u.activation as activation from RUser as u]]>
+		<![CDATA[select u.oid as oid, u.name.orig as name, coalesce(u.givenName.orig, '') as firstName, coalesce(u.familyName.orig, '') as lastName, u.activation as activation from RUser as u]]>
 	</queryString>
 	<field name="oid" class="java.lang.String"/>
 	<field name="name" class="java.lang.String"/>
@@ -54,7 +54,7 @@
 	<columnHeader>
 		<band height="24" splitType="Stretch">
 			<frame>
-				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="SubTitle" mode="Transparent" x="0" y="1" width="400" height="19" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="SubTitle" mode="Transparent" x="0" y="1" width="700" height="19" isRemoveLineWhenBlank="true"/>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="0" y="0" width="100" height="18"/>
 					<textElement verticalAlignment="Middle">
@@ -83,13 +83,34 @@
 					</textElement>
 					<text><![CDATA[Activation]]></text>
 				</staticText>
+				<staticText>
+					<reportElement uuid="2ffd228b-8b87-4bc6-a9d2-31e8a2d5dbb7" style="Column header" mode="Opaque" x="400" y="0" width="100" height="18"/>
+					<textElement verticalAlignment="Middle">
+						<font isBold="true"/>
+					</textElement>
+					<text><![CDATA[Role]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="2c4faeb3-d19c-4c1e-bfbf-1b10cece8ae8" style="Column header" mode="Opaque" x="500" y="0" width="100" height="18"/>
+					<textElement verticalAlignment="Middle">
+						<font isBold="true"/>
+					</textElement>
+					<text><![CDATA[Organization]]></text>
+				</staticText>
+				<staticText>
+					<reportElement uuid="442eeb24-6e46-48f7-8aa0-cb3ab3b8cb83" style="Column header" mode="Opaque" x="600" y="0" width="100" height="18"/>
+					<textElement verticalAlignment="Middle">
+						<font isBold="true"/>
+					</textElement>
+					<text><![CDATA[Accounts]]></text>
+				</staticText>
 			</frame>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="50" splitType="Stretch">
+		<band height="16" splitType="Stretch">
 			<frame>
-				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Row" mode="Opaque" x="0" y="1" width="400" height="48"/>
+				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Row" mode="Opaque" x="0" y="1" width="700" height="15"/>
 				<textField isStretchWithOverflow="true">
 					<reportElement uuid="ebaef16d-2903-4029-9a6b-d4d244558ae9" style="Detail" x="0" y="0" width="100" height="13"/>
 					<textElement verticalAlignment="Middle"/>
@@ -111,7 +132,7 @@
 					<textFieldExpression><![CDATA[$F{activation}.getAdministrativeStatus().getSchemaValue()]]></textFieldExpression>
 				</textField>
 				<subreport>
-					<reportElement uuid="6028233e-7e6e-4c96-b46c-abfadbd936f9" positionType="Float" x="0" y="16" width="100" height="30" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="6028233e-7e6e-4c96-b46c-abfadbd936f9" positionType="Float" x="400" y="0" width="100" height="13" isPrintWhenDetailOverflows="true"/>
 					<subreportParameter name="USER_OID">
 						<subreportParameterExpression><![CDATA[$F{oid}]]></subreportParameterExpression>
 					</subreportParameter>
@@ -122,7 +143,7 @@
 					<subreportExpression><![CDATA[$P{roleReport}]]></subreportExpression>
 				</subreport>
 				<subreport>
-					<reportElement uuid="6028233e-7e6e-4c96-b46c-abfadbd936f9" positionType="Float" x="100" y="16" width="100" height="30" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="6028233e-7e6e-4c96-b46c-abfadbd936f9" positionType="Float" x="500" y="0" width="100" height="13" isPrintWhenDetailOverflows="true"/>
 					<subreportParameter name="USER_OID">
 						<subreportParameterExpression><![CDATA[$F{oid}]]></subreportParameterExpression>
 					</subreportParameter>
@@ -132,8 +153,19 @@
 					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					<subreportExpression><![CDATA[$P{orgReport}]]></subreportExpression>
 				</subreport>
+				<subreport>
+					<reportElement uuid="6028233e-7e6e-4c96-b46c-abfadbd936f9" positionType="Float" x="600" y="0" width="100" height="13" isPrintWhenDetailOverflows="true"/>
+					<subreportParameter name="USER_OID">
+						<subreportParameterExpression><![CDATA[$F{oid}]]></subreportParameterExpression>
+					</subreportParameter>
+					<subreportParameter name="HIBERNATE_SESSION">
+						<subreportParameterExpression><![CDATA[$P{HIBERNATE_SESSION}]]></subreportParameterExpression>
+					</subreportParameter>
+					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+					<subreportExpression><![CDATA[$P{accountReport}]]></subreportExpression>
+				</subreport>
 				<line>
-					<reportElement uuid="a591d4c1-1cad-4da2-9f9d-081f539e9043" positionType="FixRelativeToBottom" x="0" y="47" width="400" height="1"/>
+					<reportElement uuid="a591d4c1-1cad-4da2-9f9d-081f539e9043" positionType="FixRelativeToBottom" x="0" y="14" width="700" height="1"/>
 					<graphicElement>
 						<pen lineWidth="0.5" lineColor="#999999"/>
 					</graphicElement>
@@ -144,7 +176,7 @@
 	<columnFooter>
 		<band height="7" splitType="Stretch">
 			<line>
-				<reportElement uuid="a591d4c1-1cad-4da2-9f9d-081f539e9043" positionType="FixRelativeToBottom" x="0" y="3" width="400" height="1"/>
+				<reportElement uuid="a591d4c1-1cad-4da2-9f9d-081f539e9043" positionType="FixRelativeToBottom" x="0" y="3" width="700" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
@@ -154,7 +186,7 @@
 	<pageFooter>
 		<band height="32" splitType="Stretch">
 			<frame>
-				<reportElement uuid="fbe8aae4-6500-468a-b1e8-700b569139a1" mode="Transparent" x="0" y="1" width="802" height="24" forecolor="#000000" backcolor="#267994"/>
+				<reportElement uuid="fbe8aae4-6500-468a-b1e8-700b569139a1" mode="Transparent" x="0" y="1" width="800" height="24" forecolor="#000000" backcolor="#267994"/>
 				<textField>
 					<reportElement uuid="5c062c66-ba45-4288-9dcd-246e28c5af75" style="Column header" x="680" y="1" width="80" height="20" forecolor="#000000"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
