updated audit report configuration, now we can select also time from/to

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
@@ -24,7 +24,7 @@
                     <wicket:message key="AuditPopupPanel.dateFrom"/>
                 </td>
                 <td>
-                    <input type="text" wicket:id="dateFrom"/>
+                    <span wicket:id="dateFrom"/>
                 </td>
             </tr>
             <tr>
@@ -32,7 +32,7 @@
                     <wicket:message key="AuditPopupPanel.dateTo"/>
                 </td>
                 <td>
-                    <input type="text" wicket:id="dateTo"/>
+                    <span wicket:id="dateTo"/>
                 </td>
             </tr>
         </table>
